--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,17 @@ body {
     height: 900px;
 }
 
+.header::before {
+    content: '';
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 900px;
+    display: block;
+}
+
 .header-list {
     display: flex;
     justify-content: center;
@@ -64,8 +75,14 @@ body {
 .header-list li a {
     text-decoration: none;
     color: white;
-    font-size: 15px;
+    font-size: 1.6rem;
     font-weight: bold;
+}
+
+@media only screen and (max-width: 1000px){
+    .header-list li a {
+        font-size: 1.3rem;
+    }
 }
 
 #lang {
@@ -81,7 +98,6 @@ body {
     padding-top: 16px;
 }
 
-
 #lang li:first-child {
     margin-left: 30px;
 }  
@@ -89,6 +105,14 @@ body {
 #lang li:last-child {
     margin-left: 80px;
 }  
+
+.container {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    z-index: 1;
+}
 
 .name{
     font-size: 90px;
@@ -115,7 +139,21 @@ body {
     border-radius: 10px;
 }
 
+.scroll {
+    padding-top: 60px;
+    display: inline-block;
+}
 
+.scroll span{
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    border-left: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    box-sizing: border-box;
+}
 
 .main {
     padding: 0 20% 0 20%;
@@ -138,7 +176,7 @@ body {
 
 .main h1 {
     font-size: 3.0rem;
-    margin-top: 80px;
+    margin-top: 100px;
     text-align: center;
     text-decoration: underline;
     text-decoration-color: rgb(163, 4, 4); 
@@ -198,6 +236,7 @@ body {
     margin: auto 20px;
     vertical-align: middle;
 }
+
 
 .publicationContents {
     font-size: 1.7rem;
