--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html {
 
 @media only screen and (max-width: 1000px){
     html {
-        font-size: 14px;
+        font-size: 16px;
     }
 }
 
@@ -48,6 +48,7 @@ body {
 #nav {
     list-style: none;
     margin: auto;
+    padding: 0;
 }
 
 #head.transform{
@@ -61,10 +62,6 @@ body {
     position: fixed;
     z-index: 1;
     top: 0;
-}
-
-#nav {
-    padding-left: 25px;
 }
    
 #nav li {
