--- a/styles.css
+++ b/styles.css
@@ -257,7 +257,7 @@ body {
 }
 
 .work li:nth-child(2) {
-    background: url("img/vaccine.png") no-repeat center;
+    background: url("img/slackpaperpost.png") no-repeat center;
 }
 
 .work li{
